// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Table 1`] = `
<ContextProvider
  value={Object {}}
>
  <table
    className=" responsiveTable"
  >
    <Thead>
      <Tr>
        <Th>
          Annual Conference
        </Th>
        <Th>
          Year
        </Th>
        <Th>
          Location
        </Th>
        <Th>
          President
        </Th>
        <Th>
          Program Chair
        </Th>
        <Th>
          Conference Theme
        </Th>
      </Tr>
    </Thead>
    <Tbody>
      <Tr>
        <Td>
          31
        </Td>
        <Td>
          2017
        </Td>
        <Td>
          Alabama Community College System (ACCS)
        </Td>
        <Td>
          Mr. Toner Evans, Samford University
        </Td>
        <Td>
          Ms. Kelly Birchfield, Auburn University Montgomery
        </Td>
      </Tr>
    </Tbody>
  </table>
</ContextProvider>
`;

exports[`Render table with an only one column 1`] = `
<ContextProvider
  value={Object {}}
>
  <table
    className=" responsiveTable"
  >
    <Thead>
      <Tr>
        <Th>
          Annual Conference
        </Th>
      </Tr>
    </Thead>
    <Tbody>
      <Tr>
        <Td>
          31
        </Td>
      </Tr>
    </Tbody>
  </table>
</ContextProvider>
`;

exports[`Render table with conditional and unconditional column 1`] = `
<table
  className=" responsiveTable"
>
  <thead>
    <tr>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C1
        </div>
        C1
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C3
        </div>
        C3
      </td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C1
        </div>
        V1
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C3
        </div>
        V3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Render table with conditional column 1`] = `
<table
  className=" responsiveTable"
>
  <thead>
    <tr />
  </thead>
  <tbody>
    <tr />
  </tbody>
</table>
`;

exports[`Render table with more columns in body 1`] = `
<table
  className=" responsiveTable"
>
  <thead>
    <tr>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C1
        </div>
        C1
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C3
        </div>
        C3
      </td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C1
        </div>
        V1
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C3
        </div>
        V3
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        />
        V4
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        />
        V5
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        />
        V6
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Render table with more columns in header 1`] = `
<table
  className=" responsiveTable"
>
  <thead>
    <tr>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C1
        </div>
        C1
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C3
        </div>
        C3
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C4
        </div>
        C4
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C5
        </div>
        C5
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C6
        </div>
        C6
      </td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C1
        </div>
        V1
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C3
        </div>
        V3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Render table with only header and empty row 1`] = `
<table
  className=" responsiveTable"
>
  <thead>
    <tr>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          Test Column
        </div>
        Test Column
      </td>
    </tr>
  </thead>
  <tbody>
    <tr />
  </tbody>
</table>
`;

exports[`Render table without any column 1`] = `
<ContextProvider
  value={Object {}}
>
  <table
    className=" responsiveTable"
  >
    <Thead>
      <Tr />
    </Thead>
    <Tbody>
      <Tr />
    </Tbody>
  </table>
</ContextProvider>
`;

exports[`Table updates correctly upon change of key prop: headersA 1`] = `
<Parent
  headers={
    Array [
      "alpha",
      "beta",
    ]
  }
  i={1}
>
  <Table
    key="1"
  >
    <table
      className=" responsiveTable"
    >
      <Thead>
        <thead>
          <Tr
            inHeader={true}
          >
            <TrInner
              headers={
                Object {
                  "0": "alpha",
                  "1": "beta",
                }
              }
              inHeader={true}
            >
              <tr>
                <Th
                  columnKey={0}
                  key="0/.0"
                >
                  <th>
                    alpha
                  </th>
                </Th>
                <Th
                  columnKey={1}
                  key="1/.1"
                >
                  <th>
                    beta
                  </th>
                </Th>
              </tr>
            </TrInner>
          </Tr>
        </thead>
      </Thead>
      <Tbody>
        <tbody>
          <Tr>
            <TrInner
              headers={
                Object {
                  "0": "alpha",
                  "1": "beta",
                }
              }
            >
              <tr>
                <Td
                  columnKey={0}
                  key="0/.0"
                >
                  <TdInner
                    columnKey={0}
                    headers={
                      Object {
                        "0": "alpha",
                        "1": "beta",
                      }
                    }
                  >
                    <td
                      className=" pivoted"
                    >
                      <div
                        className="tdBefore"
                      >
                        alpha
                      </div>
                      item 1
                    </td>
                  </TdInner>
                </Td>
                <Td
                  columnKey={1}
                  key="1/.1"
                >
                  <TdInner
                    columnKey={1}
                    headers={
                      Object {
                        "0": "alpha",
                        "1": "beta",
                      }
                    }
                  >
                    <td
                      className=" pivoted"
                    >
                      <div
                        className="tdBefore"
                      >
                        beta
                      </div>
                      item 2
                    </td>
                  </TdInner>
                </Td>
              </tr>
            </TrInner>
          </Tr>
        </tbody>
      </Tbody>
    </table>
  </Table>
</Parent>
`;

exports[`Table updates correctly upon change of key prop: headersB 1`] = `
<Parent
  headers={
    Array [
      "one",
      "two",
    ]
  }
  i={2}
>
  <Table
    key="2"
  >
    <table
      className=" responsiveTable"
    >
      <Thead>
        <thead>
          <Tr
            inHeader={true}
          >
            <TrInner
              headers={
                Object {
                  "0": "one",
                  "1": "two",
                }
              }
              inHeader={true}
            >
              <tr>
                <Th
                  columnKey={0}
                  key="0/.0"
                >
                  <th>
                    one
                  </th>
                </Th>
                <Th
                  columnKey={1}
                  key="1/.1"
                >
                  <th>
                    two
                  </th>
                </Th>
              </tr>
            </TrInner>
          </Tr>
        </thead>
      </Thead>
      <Tbody>
        <tbody>
          <Tr>
            <TrInner
              headers={
                Object {
                  "0": "one",
                  "1": "two",
                }
              }
            >
              <tr>
                <Td
                  columnKey={0}
                  key="0/.0"
                >
                  <TdInner
                    columnKey={0}
                    headers={
                      Object {
                        "0": "one",
                        "1": "two",
                      }
                    }
                  >
                    <td
                      className=" pivoted"
                    >
                      <div
                        className="tdBefore"
                      >
                        one
                      </div>
                      item 1
                    </td>
                  </TdInner>
                </Td>
                <Td
                  columnKey={1}
                  key="1/.1"
                >
                  <TdInner
                    columnKey={1}
                    headers={
                      Object {
                        "0": "one",
                        "1": "two",
                      }
                    }
                  >
                    <td
                      className=" pivoted"
                    >
                      <div
                        className="tdBefore"
                      >
                        two
                      </div>
                      item 2
                    </td>
                  </TdInner>
                </Td>
              </tr>
            </TrInner>
          </Tr>
        </tbody>
      </Tbody>
    </table>
  </Table>
</Parent>
`;
